--- a/popup.html
+++ b/popup.html
@@ -35,10 +35,10 @@
                     
                 </div>
                 <p class=" text-xs font-thin  flex flex-row text-left pl-1">PNG, JPG, GIF de até 10MB</p>
-                <div class="mt-5 gap-5">
+               <!--  <div class="mt-5 gap-5">
                     <button type="button" class="w-20 text-xs p-1 bg-slate-100 text-slate-600  shadow-md rounded-md font-bold">Cancel</button>
                     <button id="salvar" type="submit" class="w-20 text-xs p-1  bg-cyan-600 text-slate-50  shadow-md rounded-md font-bold">Save</button>
-                </div>
+                </div> -->
             </form>
             <pre id="output"></pre>
     </center>
